feat: Добавлена система Telegram уведомлений с исправлением форматирования ошибок
✅ Реализованные функции:
- Модуль TelegramNotifier для отправки уведомлений
- Интерактивная настройка бота через setup-telegram.js
- Интеграция с системой мониторинга
- Playwright репортер с автоматическими уведомлениями
- Исправление отображения [object Object] в ошибках

🔧 Исправления:
- Добавлена функция formatError() для правильного форматирования ошибок
- Поддержка строковых, объектных и Error типов ошибок
- Ограничение длины сообщений для Telegram
- Обработка stack trace и метаданных

📱 Типы уведомлений:
- Ошибки тестирования с скриншотами
- Недоступность сайта
- Медленная производительность
- Сводные отчеты
- Критические ошибки системы

🧪 Тестирование:
- npm run telegram:setup - настройка бота
- npm run telegram:test - тест уведомлений
- npm run telegram:test-errors - тест форматирования ошибок

📚 Документация:
- TELEGRAM_SETUP.md - подробное руководство
- TELEGRAM_IMPLEMENTATION_REPORT.md - отчет о реализации
- ERROR_FORMATTING_FIX_REPORT.md - отчет об исправлениях
- Обновлен README.md с новыми командами

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "install-deps": "playwright install-deps",
     "monitor": "node scripts/monitor.js",
     "monitor:continuous": "node scripts/monitor-continuous.js",
+    "telegram:setup": "node scripts/setup-telegram.js",
+    "telegram:test": "node scripts/test-telegram.js",
+    "telegram:test-errors": "node scripts/test-error-formatting.js",
     "setup": "npm install && playwright install",
     "setup:optimized": "npm install && playwright install && npm run test:fast",
     "clean": "rm -rf reports/ test-results/ logs/",
