🐳 Добавлена Docker контейнеризация для Playwright тестов
✅ Docker файлы:
- Dockerfile - основной образ на базе Playwright
- docker-compose.yml - конфигурация сервисов
- docker-compose.override.yml - переопределения для разработки
- .dockerignore - исключение ненужных файлов

🔧 Скрипты:
- scripts/docker-build.sh - сборка Docker образа
- scripts/docker-run.sh - запуск тестов в Docker

📦 Сервисы:
- playwright-tests - быстрые тесты
- playwright-full - полные тесты
- playwright-monitor - непрерывный мониторинг
- playwright-dev - режим разработки с UI

🎯 NPM команды:
- npm run docker:build - сборка образа
- npm run docker:fast - быстрые тесты
- npm run docker:full - полные тесты
- npm run docker:monitor - мониторинг
- npm run docker:dev - режим разработки
- npm run docker:clean - очистка

📚 Документация:
- DOCKER_GUIDE.md - подробное руководство по Docker
- Обновлен README.md с Docker инструкциями

🚀 Готово к использованию в Docker!

--- a/package.json
+++ b/package.json
@@ -30,7 +30,14 @@
     "setup:optimized": "npm install && playwright install && npm run test:fast",
     "clean": "rm -rf reports/ test-results/ logs/",
     "lint": "eslint tests/ scripts/",
-    "lint:fix": "eslint tests/ scripts/ --fix"
+    "lint:fix": "eslint tests/ scripts/ --fix",
+    "docker:build": "./scripts/docker-build.sh",
+    "docker:run": "./scripts/docker-run.sh",
+    "docker:fast": "./scripts/docker-run.sh fast",
+    "docker:full": "./scripts/docker-run.sh full",
+    "docker:monitor": "./scripts/docker-run.sh monitor",
+    "docker:dev": "./scripts/docker-run.sh dev",
+    "docker:clean": "./scripts/docker-run.sh clean"
   },
   "keywords": [
     "playwright",
